Change instructions to be compatible with APIM 4.2.0 and Java 17